# fastapi_auth_service

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_08_02_2005-dfad8a4f42fe_created_users_model.py  2024_08_08_1250-8fdbb79ea70f_db_default_is_active_true.py  2024_08_08_1735-ae4e2df649b7_first_users_model.py  2024_08_09_1936-500593a1a2c9_fastapi_users.py
src/: config.py  database.py  main.py
src/auth/: dependencies.py  fastapi_users_router.py  models.py  repository.py  router.py  schemas.py  service.py  token_config.py  user_manager.py  utils.py
