[tool.poetry]
name = "first-fastapi-project"
version = "0.1.0"
description = "fastapi authentication microservice"
authors = ["Artjom Tumchjonok <tumchenok.artem@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
